--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -6,7 +6,7 @@ d-i localechooser/supported-locales en_US.UTF-8
 
 # Hostname / domain
 d-i netcfg/get_hostname string ubuntu-2204
-d-i netcfg/get_domain string service.dokumenta
+d-i netcfg/get_domain string 
 
 
 # Keyboard
