--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -29,7 +29,7 @@ d-i mirror/http/proxy string
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
-d-i pkgsel/include string openssh-server cryptsetup libssl-dev libreadline-dev zlib1g-dev
+d-i pkgsel/include string openssh-server cryptsetup libssl-dev libreadline-dev zlib1g-dev network-manager mc original-awk traceroute net-tools
 
 # Partitioning
 d-i partman-auto/method string lvm
