--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -48,8 +48,10 @@ d-i partman/choose_partition select finish
 # Create packer user account.
 d-i passwd/user-fullname string packer
 d-i passwd/username string packerbuilt
+d-i passwd/user-uid string 1012
 d-i passwd/user-password password PackerBuilt!
 d-i passwd/user-password-again password PackerBuilt!
 d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 d-i passwd/user-default-groups packer sudo
+d-o preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt
