--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -8,6 +8,9 @@ d-i localechooser/supported-locales en_US.UTF-8
 d-i netcfg/get_hostname string ubuntu-2204
 d-i netcfg/get_domain string 
 
+# Network
+# disable Predictable Network Interface Names
+d-i debian-installer/add-kernel-opts string net.ifnames=0
 
 # Keyboard
 d-i console-setup/ask_detect boolean false
@@ -43,7 +46,6 @@ d-i partman/confirm_nooverwrite boolean true
 d-i partman/confirm boolean true
 d-i partman/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
-
 
 # Create packer user account.
 d-i passwd/user-fullname string packer
