--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -6,7 +6,7 @@ d-i localechooser/supported-locales en_US.UTF-8
 
 # Hostname / domain
 d-i netcfg/get_hostname string ubuntu-2204
-d-i netcfg/get_domain string 
+d-i netcfg/get_domain string local
 
 # Network
 # disable Predictable Network Interface Names
@@ -32,7 +32,7 @@ d-i mirror/http/proxy string
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
-d-i pkgsel/include string openssh-server cryptsetup libssl-dev libreadline-dev zlib1g-dev network-manager mc original-awk traceroute net-tools
+d-i pkgsel/include string openssh-server cryptsetup libssl-dev libreadline-dev zlib1g-dev
 
 # Partitioning
 d-i partman-auto/method string lvm
@@ -56,4 +56,6 @@ d-i passwd/user-password-again password $1$rKxy/hZT$vAZ801S0/UEAEmVKogUdU0
 d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 d-i passwd/user-default-groups packer sudo
-d-o preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt
+
+# Late Command
+d-i preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt; apt-get update && apt-get install network-manager mc original-awk traceroute net-tools
