--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -11,6 +11,7 @@ d-i netcfg/get_domain string local
 # Network
 # disable Predictable Network Interface Names
 d-i debian-installer/add-kernel-opts string net.ifnames=0
+d-i debian-installer/add-kernel-opts string biosdevname=0
 
 # Keyboard
 d-i console-setup/ask_detect boolean false
@@ -58,4 +59,4 @@ d-i user-setup/encrypt-home boolean false
 d-i passwd/user-default-groups packer sudo
 
 # Late Command
-d-i preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt; apt-get update && apt-get install network-manager mc original-awk traceroute net-tools
+d-i preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt
