--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -53,7 +53,7 @@ d-i passwd/user-fullname string packer
 d-i passwd/username string packerbuilt
 d-i passwd/user-uid string 1012
 d-i passwd/user-password password PackerBuilt!
-d-i passwd/user-password-again password $1$rKxy/hZT$vAZ801S0/UEAEmVKogUdU0
+d-i passwd/user-password-again password PackerBuilt!
 d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 d-i passwd/user-default-groups packer sudo
