--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -58,4 +58,4 @@ d-i user-setup/encrypt-home boolean false
 d-i passwd/user-default-groups packer sudo
 
 # Late Command
-d-i preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt
+d-o preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt
