--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -14,7 +14,9 @@ d-i debian-installer/add-kernel-opts string net.ifnames=0
 
 # Keyboard
 d-i console-setup/ask_detect boolean false
-d-i keyboard-configuration/layoutcode string ger
+d-i keymap select de
+d-i keyboard-configuration/xkb-keymap select de
+d-i keyboard-configuration/layoutcode string de
 
 # Timezone / Time
 d-i clock-setup/utc boolean true
@@ -58,4 +60,4 @@ d-i user-setup/encrypt-home boolean false
 d-i passwd/user-default-groups packer sudo
 
 # Late Command
-d-o preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt
+d-i preseed/late_command string groupmod -g 1012 packerbuilt; chown -r packerbuilt:packerbuilt /home/packerbuilt
