--- a/vSphere/ubuntu_2204-1/http/preseed.cfg
+++ b/vSphere/ubuntu_2204-1/http/preseed.cfg
@@ -39,8 +39,26 @@ d-i pkgsel/include string openssh-server cryptsetup libssl-dev libreadline-dev z
 # Partitioning
 d-i partman-auto/method string lvm
 d-i partman-auto-lvm/guided_size string max
-d-i partman-auto/choose_recipe select atomic
+d-i partman-auto-lvm/new_vg_name string primary
 d-i partman-auto/disk string /dev/sda
+d-i partman-auto/expert_recipe string         \
+   boot-crypto ::                             \
+      1 1 1 free                              \
+         $bios_boot{ }                        \
+         method{ biosgrub } .                 \
+      256 256 256 fat32                       \
+         $primary{ } $lvmignore{ }            \
+         method{ efi } format{ } .            \
+      512 512 512 ext3                        \
+         $primary{ } $bootable{ }             \
+         method{ format } format{ }           \
+         use_filesystem{ } filesystem{ ext3 } \
+         mountpoint{ /boot } .                \
+      7415 7415 -1 ext4                       \
+         $lvmok{ }                            \
+         method{ format } format{ }           \
+         use_filesystem{ } filesystem{ ext4 } \
+         mountpoint{ / } .                    \
 d-i partman-lvm/confirm boolean true
 d-i partman-lvm/confirm_nooverwrite boolean true
 d-i partman-lvm/device_remove_lvm boolean true
